--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "mocha": "^5.2.0",
     "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
     "sinon": "^7.2.2"
